refactor: change jetbrains-ide-optimize